--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Richard Ayensu's Portfolio</h1>
-    <h2>Im a Web Developer</h2>
+    <h2>I am a Web Developer</h2>
     <hr>
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/Movies.PNG" height="200" width="200
