--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,10 +1,10 @@
-<h1>The Best Movies According to Kwabena</h1>
+<h1>The Best Movies According to Richrad Ayensu</h1>
 
 <h2>My top 3 of all-time</h2><hr/>
 
 <h3>Moana</h3>
 <p>This is my favorite cartoon. I love the pictures.</p>
 <h3>Shogun</h3>
-<p>This is my favorite series of all time. Its epic and adventeous.</p>
+<p>This is my favorite series of all time. Its epic and adventurous.</p>
 <h3>Cabrini </h3>
 <p>This is my favorite drama movie. It is very inspiring.</p>
