--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,4 +1,4 @@
-<h1>The Best Movies According to Richrad Ayensu</h1>
+<h1>The Best Movies According to Richard Ayensu</h1>
 
 <h2>My top 3 of all-time</h2><hr/>
 
