--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -7,7 +7,7 @@
 " alt="birthday cake"/>
 <h3>What to bring</h3>
 <ul>
-    <li>Baloons (I love baloons)</li>
+    <li>Balloons (I love baloons)</li>
     <li>A cake</li>
     <li>Money for the birthday celebrant</li>
 </ul>
